src/test/kalang-snippets/error/InitializationCheck.kl
num is uninitialized!

int num;
if ( "".equals(1) ) {
    num = 1;
}
num++;